--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    id("io.qameta.allure") version "2.11.2"
 }
 
 group = "com.alexey_k"
@@ -7,6 +8,20 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+}
+
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter {
+        aspectjWeaver.set(true)// Annotations handling @Step
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.19.0")
+            }
+        }
+    }
 }
 
 dependencies {
@@ -25,4 +40,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+task smoke_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("Smoke")
+    }
 }
