--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
             'com.opencsv:opencsv:5.7.1',
             'com.google.code.gson:gson:2.10.1',
             'com.fasterxml.jackson.core:jackson-core:2.13.1',
-            'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+            'com.fasterxml.jackson.core:jackson-databind:2.13.1',
+            'io.qameta.allure:allure-selenide:2.24.0'
     )
 }
 
