--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,17 @@ repositories {
     mavenCentral()
 }
 
+def allureVersion = "2.19.0"
+
 allure {
     report {
-        version.set("2.19.0")
+        version.set(allureVersion)
     }
     adapter {
         aspectjWeaver.set(true)// Annotations handling @Step
         frameworks {
             junit5 {
-                adapterVersion.set("2.19.0")
+                adapterVersion.set(allureVersion)
             }
         }
     }
@@ -35,9 +37,27 @@ dependencies {
             'com.google.code.gson:gson:2.10.1',
             'com.fasterxml.jackson.core:jackson-core:2.13.1',
             'com.fasterxml.jackson.core:jackson-databind:2.13.1',
-            'io.qameta.allure:allure-selenide:2.24.0'
+            'io.qameta.allure:allure-selenide:2.19.0',
+            'org.slf4j:slf4j-simple:2.0.7'
     )
 }
+
+//tasks.withType(JavaCompile) {
+//    options.encoding = 'UTF-8'
+//}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+    systemProperties(System.getProperties())
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
 
 test {
     useJUnitPlatform()
@@ -46,5 +66,11 @@ test {
 task smoke_test(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
+    }
+}
+
+task regression_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("Regression")
     }
 }
