--- a/build.gradle
+++ b/build.gradle
@@ -28,22 +28,22 @@ allure {
 
 dependencies {
     testImplementation(
-            'com.codeborne:selenide:6.18.0',
-            'com.github.javafaker:javafaker:1.0.2',
-            'org.junit.jupiter:junit-jupiter:5.10.0',
-            'com.codeborne:pdf-test:1.5.0',
-            'com.codeborne:xls-test:1.4.3',
-            'com.opencsv:opencsv:5.7.1',
-            'com.google.code.gson:gson:2.10.1',
-            'com.fasterxml.jackson.core:jackson-core:2.13.1',
-            'com.fasterxml.jackson.core:jackson-databind:2.13.1',
-            'io.qameta.allure:allure-selenide:2.19.0',
-            'org.slf4j:slf4j-simple:2.0.7'
+            "com.codeborne:selenide:6.18.0",
+            "com.github.javafaker:javafaker:1.0.2",
+            "org.junit.jupiter:junit-jupiter:5.10.0",
+            "com.codeborne:pdf-test:1.5.0",
+            "com.codeborne:xls-test:1.4.3",
+            "com.opencsv:opencsv:5.7.1",
+            "com.google.code.gson:gson:2.10.1",
+            "com.fasterxml.jackson.core:jackson-core:2.13.1",
+            "com.fasterxml.jackson.core:jackson-databind:2.13.1",
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "org.slf4j:slf4j-simple:2.0.7"
     )
 }
 
 //tasks.withType(JavaCompile) {
-//    options.encoding = 'UTF-8'
+//    options.encoding = "UTF-8"
 //}
 
 tasks.withType(Test) {
