--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ dependencies {
             "com.fasterxml.jackson.core:jackson-core:2.13.1",
             "com.fasterxml.jackson.core:jackson-databind:2.13.1",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "org.slf4j:slf4j-simple:2.0.7"
+            "org.slf4j:slf4j-simple:2.0.7",
+            'org.aeonbits.owner:owner:1.0.4'
     )
 }
 
