--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -1,4 +1,7 @@
 browser=firefox
 browserVersion=98.0
-//remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
-remoteUrl=https://selenoid.autotests.cloud
+browserSize=1920x1280
+baseUrl=https://demoqa.com
+
+isRemote=true
+remoteUrl=selenoid.autotests.cloud
